It's possible to create blank node sockets in node groups by connecting the group input directly to an output #39849

Closed
opened 2014-04-23 01:52:51 +02:00 by gandalf3 · 9 comments
Member

System Information
Archlinux

Blender Version
Broken: f93bc76

Short description of error
It's possible to create blank output sockets by connecting a group input directly into the output:

examp441.png

Exact steps for others to reproduce the error

  1. Open blender
  2. Create a node group
  3. Connect group input to group output
**System Information** Archlinux **Blender Version** Broken: f93bc76 **Short description of error** It's possible to create blank output sockets by connecting a group input directly into the output: ![examp441.png](https://archive.blender.org/developer/F85688/examp441.png) **Exact steps for others to reproduce the error** 1. Open blender 2. Create a node group 3. Connect group input to group output
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Lukas Tönne was assigned by Sergey Sharybin 2014-04-23 11:37:54 +02:00

Added subscribers: @LukasTonne, @Sergey

Added subscribers: @LukasTonne, @Sergey

@LukasTonne, mind looking into the issue? :)

@LukasTonne, mind looking into the issue? :)
Member

Hmm, i was sure this case was handled properly, looking into it ...

Hmm, i was sure this case was handled properly, looking into it ...

This issue was referenced by blender/blender-addons-contrib@513066e8ad

This issue was referenced by blender/blender-addons-contrib@513066e8ad6f8d0f15822feef62b1fc7fdfd3928

This issue was referenced by 513066e8ad

This issue was referenced by 513066e8ad6f8d0f15822feef62b1fc7fdfd3928
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 513066e8ad.

Closed by commit 513066e8ad.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39849
No description provided.