Fix T39849: Adding links directly between node group input/output extension sockets would create additional extension sockets instead of simply ignoring them.